edites introduction and question

--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -49,10 +49,7 @@
 
 \section{Background \& Motivation}
 
-Understanding the divers of changes in vegetation composition across large biogeographic gradients is fundamental because (i) vegetation is key to control ecosystem functioning, such as net primary production, and carbon storage, (ii) spatial turnover in species composition explains a large proportion of the global diversity ($\beta$ diversity), and (iii) understanding these drivers is a path towards predicting how vegetation may change as result of environmental change.
-
-% NEED TO BETTER LINK HERE TRAITS HAVE BEEN PROPOSED TO UNRAVEL THESE DRIVERS
-Beyond species succession pattern along climatic gradients, several
+Understanding the divers of changes in vegetation composition across large biogeographic gradients is fundamental because vegetation controls key ecosystem functions such as net primary production, and carbon storage and shelters a significant proportion of the global biodiversity. Understanding the drivers of these changes is a path towards predicting how vegetation may change as result of environmental change. Beyond species succession pattern along climatic gradients, several
 studies document gradient of functional traits along climatic
 gradients. Because functional traits are directly related to plant functioning these traits gradients raised the hope to better understand drivers of changes in vegetation. One specificity of observed pattern of traits variation is
 that they are generally weak with generally a higher variation within
@@ -73,60 +70,40 @@ Plot of pattern for leaf traits extracted from glopnet \citep{Wright-2004}.
 \label{fig:leafpattern}}
 \end{figure}
 
-\clearpage
-
-\section{Potential mechanisms for these patterns}
-
 Documenting empirical patterns of variation of plant traits along
-climatic gradient represents a key first step to understand changes in
+climatic gradient represents a first step to understand changes in
 vegetation composition, but we also need to propose mechanisms to
 explain these traits patterns. 
 
-
 There is a long history of studies
 proposing adaptative arguments based on optimisation approaches with
-ecophysiological models of plant functioning \citep{Makela-2002}. For instance, high $LMA$ has been proposed as an advantage in dry climate because
-stiffer leaves can have a higher resistance to dehydration
-\citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
-under condition of low transpiration \citep{Leigh-2012}.
+ecophysiological models of plant functioning \citep{Makela-2002}. For instance, high $LMA$ and high $N_{area}$ has been proposed as an advantage in dry climate because
+a higher resistance to dehydration
+\citep{Wright-2002a,Wright-2002b}, lower risk of overheating
+under condition of low transpiration \citep{Leigh-2012}, and better photosynthesis performance at low stomatal conductance \citep{Wright-2003}.
 
-%% Higher
-%% $N_{area}$ in dry climate have also been proposed as strategy to
-%% maximise photosynthesis \citep{Wright-2003}. This is
-%% based on the idea that plant are minimising the summed cost of water
-%% loss and carbon gain
-%% \citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
-%% higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
-%% plant to achieve a high $A_{area}$ even at the low stomatal conductance
-%% $g_s$ encountered in dry climate.
-
-Optimisation approaches provide, however, no explanations to the large range of trait variation observed
+Optimisation approaches provide, however, no explanations for the large range of trait variation observed
 within each site. This is because they fail to account for the fact that
-these traits also controls species interaction and the coexistence of
+traits also controls species interaction and the coexistence of
 species with different traits values. 
 Theoretical models \citep{Case-2000,Goldberg-2006,Leimar-2008}
 studies have shown that abiotic constrains and competitive interactions jointly control species coexistence \citep{Chesson-2018} and the range of traits
-value found in a given community and along environmental gradients. Competition can clearly make the traits deviate from the climatic optimum.  Generally, theses theoretical models are, however, only weakly connected with the physiological processes, real traits, and abiotic gradients and provides no prediction to be compared with field data. 
+value found along environmental gradients. Competition interactions can clearly make the traits deviate from the climatic optimum but also explain the range of traits observed in a site.  Unfortunately, theses theoretical models are generally weakly connected with the physiological processes, real traits, and abiotic gradients and provides thus are of little help to interpret pattern observed in the field. 
 
-Recently a few studies have started to connect physiological approach
-and the theoretical approach to build trait-based models of full
-communities dynamics either at local \citep{Farrior-2013} or global
-scale \citep[see][]{Sakschewski-2015,Scheiter-2013}. They represent key elements of plant ecophysiological functioning. But they have been largely unsuccessful at explaining the wide range of traits found in a single community as these models generally failed to capture the processes promoting species coexistence.
+Recently studies have started to connect physiological approach
+and the theoretical approach to build trait-based models at local \citep{Farrior-2013} and global
+scale \citep[see][]{Sakschewski-2015,Scheiter-2013}. But these models have been largely unsuccessful at explaining the wide range of traits found in a single community because they failed to capture the processes promoting species coexistence.
 
 It is thus key to develop mechanistic models where traits are related
-to both the direct climate effect and to species coexistence. We propose to do this with a new model -- \plant\
+to both climate constraints and coexistence mechanisms. We propose to do this with a new model -- \plant\
 \citep{Falster-2016,Falster-2017} -- that connects directly with leaf
 traits and simultaneously allows for coexistence within sites and
 variation across sites. Coexistence is driven by competition for light
 in size-structured meta-populations and the outcomes of competition is
-moderated by environmental factors such as site productivity and disturbance regime.
-
-Here we propose to focus on two traits, $LMA$ and $N_{area}$ which are know to be related to competition for light and water stress gradients. These two traits are among the most common traits and we start to have a deep understanding of their effect on pant functioning. 
+moderated by environmental conditions and disturbance regime. Here we focus on two traits, $LMA$ and $N_{area}$ which are know to be related to response to water stress and competition for light. These two traits are among the most common traits and we start to have a deep understanding of their effect on plant functioning. 
 
 \subsection{$LMA$ and $N_{area}$ response to light}
- In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. The coordination between $LMA$ and $LSS$ discriminates different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favoured in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favoured in low light condition. Low $N_{area}$ is related to a higher shade-tolerance for small trees \citep{Falster-2018}, because of a higher respiration cost.
-
-
+The coordination between $LMA$ and $LSS$ discriminates different strategies of light use \citep{Falster-2018}. Species with low $LMA$ have a greater potential maximum growth and are thus favoured in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favoured in low light condition. High $N_{area}$ results in faster growth rate in high light, but this advantage comes at the cost of higher respiration rate resulting poor perfroamnce in low light \citep{Falster-2018}.
  
 \subsection{$LMA$ and $N_{area}$ response to aridity}
 
@@ -136,36 +113,25 @@ stiffer leaves can have a higher resistance to dehydration
 under condition of low transpiration \citep{Leigh-2012}.
 Pattern of variation of $LMA$ along aridity gradient is extremely weak and it is unclear whether this is directly related to an adaptive value to the abiotic stress or to a response to a change in productivity with aridity.
  
-$N_{area}$ is related to water stress tolerance and shade tolerance. Optimisation literature of $N_{area}$ predict that $N_{area}$ should
-increase with aridity \citep{Wright-2003}. The general approach is
-based on the idea that plant are minimising the summed cost of water
+$N_{area}$ is related to water stress tolerance. Optimisation literature of $N_{area}$ predict that $N_{area}$ should
+increase with aridity \citep{Wright-2003}, based on the idea that plant are minimising the summed cost of water
 loss and carbon gain
 \citep{Medlyn-2002,Wright-2003,Prentice-2014,Lu-2016,Wang-2017,Dong-2017}. As
 higher $N_{area}$ translate into higher $V_{cmax}$ this allows the
 plant to achieve a high $A_{area}$ even at low stomatal conductance
-$g_s$. Recently \citet{Prentice-2014} and \citet{Dong-2017} provided
-quantitative predictions for the effect of key climatic variable
-(including VPD) based on an optimised Farquhar photosynthesis
-model, showing how high leaf nitrogen could be selected in water stressed areas. Several authors have challenged the idea of summing the cost of
-water and carbon gain on the ground that competition should favour
-carbon gain optimisation only \citep{Wolf-2016} and the idea that the
-main effect of water stress come through cavitation and mortality \citep{Sperry-2016,Sperry-2017}. Our knowledge on these alternative mechanisms is however too lacunar to be explored in \plant\ for the moment.
-
-An additional effect of $N_{area}$ along aridity gradient is that higher $N_{area}$ could be related to a lower mechanical resistance of leaf resulting in a shift in the LMA \textit{vs.} leaf lifespan tradeoff to shorter lifespan \citep{Wright-2002a}.
-
-%% \citep{Dong-2017} proposed that
-%% $N_{area}$ could be divided in structural and rubisco related N and that this is structura(using
-%% the relationship of \citet{Onoda-2004}) but this distinction of N in to group is beyond the current implementation of \plant\ .
-
+$g_s$. This optimisation approach capture only part of the mechanisms as water stress also comes through soil water limitation leading to both carbon gain limitation and cavitation and mortality \citep{Sperry-2016,Wolf-2016,Sperry-2017}. A side effect of $N_{area}$ increase along aridity gradient is that higher $N_{area}$ could results in lower mechanical resistance of leaf resulting shifting the LMA \textit{vs.} leaf lifespan tradeoff intercept toward shorter lifespan \citep{Wright-2002a}.
 
 \section{Key questions}
 
-We propose to extend Plant to include a direct effect of water stress leaf photosynthesis by using a coupled Farquhar photosynthesis model and stomatal conductance model. This allows us to explore water stress effect on photosynthesis through the most simple and well know effect, a direct effect of vapour pressure deficit 'vpd' on leaf photosynthesis. This approach
-  is based on well know mechanisms implemented in most DGVMs. This approach however represents only water stress effect through vpd and ignore water stress through soil water availability. This extended model allow us to explore a classical mechanisms which propose that higher $N_{area}$ could results in higher drought tolerance because higher $N_{area}$ is related to higher $V_{cmax}$ that allows the
-plant to achieve a high $A_{area}$ even at low stomatal conductance
-$g_s$ \citep{Wright-2003}. This $N_{area}$ advantage of could comes at an additional cost than just increase respiration by decreasing leaf lifespan because of lower mechanical resistance \citep{Wright-2002a}.  
+We propose to extend \plant\ to evaluate how the evolutionary assemblage of $LMA$ and $N_{area}$ into meta-community competing for light change along a water stress gradient. To do that we include a direct effect of water stress on leaf photosynthesis in \plant\ by using a coupled Farquhar photosynthesis model and stomatal conductance model. Water stress affect photosynthesis though an increase of vapour pressure deficit 'vpd'. This approach
+is based on well know mechanisms implemented in most DGVMs (add ref) and represents the most simple and well know effect water stress effect. vpd vary over short term depending on short term temperature changes and ignore soil water availability limitations. However, over the long term and large spatial scale variation in vpd are expected to follows trends in the availability of water for evaporation and transpiration \citep{Prentice-2014}. We will explore the role of soil water stress and water competition in futur version of the model.
 
-Using this model how the assemblage of LMA and $N_{area}$ change along a gradient of drought stress represented by vpd. Metacommunities are assembled evolutionarily building on the adaptive dynamics framework. More specifically we test the following hypothesis:  
+
+With this extended model we explore a classical mechanism which propose that higher $N_{area}$ could results in higher drought tolerance because higher $N_{area}$ is related to higher $V_{cmax}$ that allows the
+plant to achieve a high $A_{area}$ even at low stomatal conductance
+$g_s$ \citep{Wright-2003}. However, this $N_{area}$ advantage of could comes at an additional cost than just increase respiration by decreasing leaf lifespan because of lower mechanical resistance \citep{Wright-2002a}.
+
+Building on the adaptive dynamics framework with simulate evolutionary assemblage of $LMA$ and $N_{area}$ in meta-communities at different mean vpd to test the following hypothesis:  
  
 \begin{itemize}
 
