remove unused functions and fix Narea LTR

--- a/ms/Plant_WaterStress_SupplMat.tex
+++ b/ms/Plant_WaterStress_SupplMat.tex
@@ -420,8 +420,8 @@ The intercept of the LMA vs LT tradeoff is linearly related to $N_{area}$ as sho
 
 \begin{figure}[ht]
 \centering
-\includegraphics{../figures/data_lma_ll_trade_off_narea_slope_elev.pdf}
-\caption{\textbf{Link between $N_{area}$ and intercept and slope of the LMA vs leaf turnover tradeoff (using 14 bins of $N_{area}$ with equal number of observations per bin.}
+\includegraphics{../figures/data_B_kl_narea.pdf}
+\caption{\textbf{Link between $N_{area}$ and intercept (B_kl1) and slope (B_kl2) of the LMA vs leaf turnover tradeoff (using 14 bins of $N_{area}$ with equal number of observations per bin.}
 \label{fig:narea_intercept}}
 \end{figure}
 
