--- a/ms/Plant_WaterStress_SupplMat.tex
+++ b/ms/Plant_WaterStress_SupplMat.tex
@@ -421,7 +421,7 @@ The intercept of the LMA vs LT tradeoff is linearly related to $N_{area}$ as sho
 \begin{figure}[ht]
 \centering
 \includegraphics{../figures/data_B_kl_narea.pdf}
-\caption{\textbf{Link between $N_{area}$ and intercept (B_kl1) and slope (B_kl2) of the LMA vs leaf turnover tradeoff (using 14 bins of $N_{area}$ with equal number of observations per bin.}
+\caption{\textbf{Link between $N_{area}$ and intercept ($B_{kl1}$) and slope ($B_{kl2}$) of the LMA vs leaf turnover tradeoff (using 14 bins of $N_{area}$ with equal number of observations per bin.}
 \label{fig:narea_intercept}}
 \end{figure}
 
